--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style7.css" />
 </head>
+  <script src="app.js"></script>
 <body>
   <div class="app">
     <header>
