--- a/index.html
+++ b/index.html
@@ -1,52 +1,44 @@
 <!doctype html>
-<html lang="en">
+<html lang="he">
 <head>
-  <meta charset="utf-8" />
-  <title>SkinFix — Quick Face Tips</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="style7.css" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>גריד אביזרים — 19 פריטים</title>
+<link rel="stylesheet" href="styles7.css" />
 </head>
 <body>
-  <div class="app">
-    <header>
-      <h1>SkinFix — Quick Face Tips</h1>
-      <p>Click an area to get a short cause, tips & recommended products.</p>
-    </header>
+<div class="top-ad">פרסומת עליונה (Placeholder)</div>
+<div class="container">
+<aside class="side-ad left">פרסומת שמאלית</aside>
 
-    <main>
-      <div class="face-wrap">
-        <svg id="faceSvg" viewBox="0 0 400 500" xmlns="http://www.w3.org/2000/svg">
-          <rect width="100%" height="100%" fill="transparent"/>
-          <ellipse cx="200" cy="240" rx="120" ry="160" fill="#f6dfd6"/>
-          <path id="forehead" class="region" d="M120,120 Q200,70 280,120 L280,170 Q200,120 120,170 Z" />
-          <ellipse id="left-eye" class="region" cx="155" cy="220" rx="30" ry="18"/>
-          <ellipse id="right-eye" class="region" cx="245" cy="220" rx="30" ry="18"/>
-          <path id="nose" class="region" d="M190,235 Q200,270 210,235 Q200,250 190,235 Z"/>
-          <path id="left-cheek" class="region" d="M120,260 Q150,240 160,300 Q140,320 120,300 Z"/>
-          <path id="right-cheek" class="region" d="M280,260 Q250,240 240,300 Q260,320 280,300 Z"/>
-          <path id="mouth" class="region" d="M160,330 Q200,360 240,330 Q200,380 160,330 Z"/>
-          <circle cx="155" cy="220" r="4" fill="#222"/>
-          <circle cx="245" cy="220" r="4" fill="#222"/>
-          <path d="M180 350 Q200 365 220 350" stroke="#222" stroke-width="3" fill="none" stroke-linecap="round"/>
-        </svg>
-      </div>
 
-      <aside id="card" class="card hidden" role="dialog" aria-hidden="true">
-        <button id="closeBtn" class="close">×</button>
-        <h2 id="cardTitle">Area</h2>
-        <p id="cardCause" class="muted"></p>
-        <h3>Quick tips</h3>
-        <ul id="cardTips"></ul>
-        <h3>Recommended</h3>
-        <div id="cardProducts" class="products"></div>
-      </aside>
-    </main>
+<main class="content">
+<h1 class="site-title">גלריית איברים</h1>
+<div id="grid" class="grid"></div>
+</main>
 
-    <footer>
-      <small>“Make the face clearer”</small>
-    </footer>
-  </div>
 
-  <script src="app.js"></script>
+<aside class="side-ad right">פרסומת ימנית</aside>
+</div>
+
+
+<div class="bottom-ad">פרסומת תחתונה (Placeholder)</div>
+
+
+<template id="tile-template">
+<div class="tile">
+<img class="tile-img" src="" alt="" />
+<div class="tile-title"></div>
+<button class="menu-btn">⋯</button>
+<div class="menu" hidden>
+<button class="menu-item" data-page="page1.html">בעיה</button>
+<button class="menu-item" data-page="page2.html">בעיה</button>
+<button class="menu-item" data-page="page3.html">בעיה</button>
+</div>
+</div>
+</template>
+
+
+<script src="script.js"></script>
 </body>
 </html>
