--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>גריד אביזרים — 19 פריטים</title>
-<link rel="stylesheet" href="styles7.css" />
+<link rel="stylesheet" href="css7.css" />
 </head>
 <body>
 <div class="top-ad">פרסומת עליונה (Placeholder)</div>
