--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <div class="container">
 <aside class="side-ad left">פרסומת שמאלית</aside>
 
-{
-  background-color: #f8f1e4;
+body {
+  background-color: #f8f1e4; /* צבע שמנת */
 }
-
 <main class="content">
 <h1 class="site-title">גלריית איברים</h1>
 <div id="grid" class="grid"></div>
