--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <div class="top-ad">פרסומת עליונה (Placeholder)</div>
 <div class="container">
 <aside class="side-ad left">פרסומת שמאלית</aside>
-
-body {
-  background-color: #f8f1e4; /* צבע שמנת */
-}
+  <background-color: #f8f1e4;>
 <main class="content">
 <h1 class="site-title">גלריית איברים</h1>
 <div id="grid" class="grid"></div>
