--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 <div class="top-ad">פרסומת עליונה (Placeholder)</div>
 <div class="container">
+  <div class="gallery"></div>
+
 <aside class="side-ad left">פרסומת שמאלית</aside>
 
 <main class="content">
