--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="he">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>גלריית איברים</title>
-<link rel="stylesheet" href="css7.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>גריד אביזרים — 19 פריטים</title>
+  <link rel="stylesheet" href="css7.css" />
 </head>
-
 <body>
   <div class="top-ad">פרסומת עליונה (Placeholder)</div>
 
